# term-piechart

./: .gitignore  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: release.yml  tests.yml
examples/: colors.py  format.py  ticking.py
requirements/: dev.txt
term_piechart/: __init__.py  color.py  pie.py  slice.py
tests/: test_color.py  test_pie.py  test_slice.py
