[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "term-piechart"
description = "Library to print piecharts in your terminal"
dynamic = ["version"]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[tool.pytest.ini_options]
addopts = [
    "--cov=term_piechart",
    "--cov=tests",
    "--cov-report=term-missing",
    "--color=yes"
]
testpaths = ["tests", "term_piechart"]

[tool.ruff]
line-length = 120
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "FA",  # flake8-future-annotations
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
lint.ignore = [
    "E501", # Line too long
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
force-single-line = true


[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "pointless-string-statement"
]
[tool.pylint.design]
max-args = 10
max-attributes = 11
max-locals = 20

[tool.hatch]
version.source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
